Added fader on stars labels.
Added loading bars for nebulae and stars loading.
Corrected Sun rotational period
Added missing hipparcos stars to database
Added splash screen, new icons and improved pointers by Johan.
Improved Milky Way tone conversion. 

0.6.2 [2004-11-18]
Fixed time display bug (1 hour ahead of actual sky time during standard time if your timezone has daylight savings).  
NOTE: Time is only displayed as standard time (no daylight savings effects).
Fixed Milky Way drawing incorrectly (inside out) in desktop mode.
Fixed Milky Way always on regardless of config setting.
Fixed atmosphere flashing bug (for the final time, we hope).

0.6.1 [2004-10-17]
Added time control buttons on bottom right part of the screen.
Fixed the flashy background bug when zooming out too much in fisheye mode.
Fixed landscape gap bug in textures on some 3D card on windows.
Added all the impressive constellation art images by Johan Meuris.
Applied patches from Fumio Yamamoto for MacOSX portability.
Recoded landscape ground displaying.
Added a nice landscape from a panorama made in my own village!
Rudimentary sky localization (no accented characters) for English, Spanish, French, and some Hawaiian sky labels (needs UI)
Improved constellation art fade in/out (still need more art) and added atmosphere fade in/out
Added planet orbits feature
Added concept of sky cultures for different constellations (currently western and polynesian, needs UI)
Added meteor showers (key 9)
Added deep space object image credits
Added manual (really semi-auto) zoom option (centers for you when you start zooming, zooms in increments with key presses)
Brightened star labels for readability
	
0.6.0 [31-05-2004]
Fixed atmosphere flash bug.
Fixed disk viewport windows version bug.
Improved portability for timezone management.
Made windows package installer.

0.6.0rc2 [28/04/2004]
Fixed Venus too small bug.
Fixed minor bugs from sourceforge bug reports.

0.6.0rc1 [27/04/2004]