@@ -25,7 +25,9 @@ Corrected Sun rotational period
 Added missing hipparcos stars to database
 Added splash screen, new icons and improved pointers by Johan.
 Improved Milky Way tone conversion. 
-
+Sky labels now default to user locale language if possible
+Added fader on nebula hints (hints can now draw even when atmosphere is on)
+	
 0.6.2 [2004-11-18]
 Fixed time display bug (1 hour ahead of actual sky time during standard time if your timezone has daylight savings).  
 NOTE: Time is only displayed as standard time (no daylight savings effects).
